--- a/package.json
+++ b/package.json
@@ -1,5 +1,19 @@
 {
+  "type": "module",
+  "name": "pb_proyectofinal_acosta_gustavo",
+  "version": "1.0.0",
+  "description": "",
+  "main": "servidor.js",
   "dependencies": {
     "express": "^4.18.2"
-  }
+  },
+  "scripts": {
+    
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AGustavo2022/pB_ProyectoFinal_Acosta_Gustavo.git"
+  },
+  "author": "Acosta Gustavo",
+  "license": "ISC"
 }
